# syma

./: .gitignore  Cargo.toml  README.md
src/: error.rs  executor.rs  files.rs  interpreter.rs  lib.rs  main.rs  parser.rs  predef.rs  runtime.rs  shell.rs  symbols.rs  version.rs
