[package]
name = "syma"
description = "Symbolic math"
version = "0.0.1"
edition = "2021"
authors = ["Oliver Ruebenacker <oliverr@broadinstitute.org>"]
readme = "README.md"
repository = "https://github.com/broadinstitute/syma"
license = "BSD-3-Clause"
keywords = ["math", "symbolic", "algebra", "calculus", "mathematics"]

[dependencies]
jati = { git = "https://github.com/broadinstitute/jati.git" }
rustyline = "14.0.0"
home = "0.5.9"
uuid = "1.10.0"
